--- a/app/src/main/res/layout/row_zoomable_image.xml
+++ b/app/src/main/res/layout/row_zoomable_image.xml
@@ -2,12 +2,14 @@
 <com.otaliastudios.zoom.ZoomLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:hasClickableChildren="true"
     tools:context=".FirstFragment">
 
     <ImageView
+        android:layout_gravity="center"
         android:id="@+id/pocImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
